cabal-version:       >=1.10
name:                octool
version:             1.0
synopsis:            Helper tool for building Opencast without hassle
license-file:        LICENSE
author:              Philipp Middendorf <pmidden@mailbox.org>
maintainer:          Philipp Middendorf <pmidden@mailbox.org>
copyright:           Philipp Middendorf, 2019
build-type:          Simple

executable octool
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  -- hs-source-dirs:
  default-language:    Haskell2010
  build-tools:         hlint
                     , cabal-install
                     , hindent